--- a/220319/town.html
+++ b/220319/town.html
@@ -11,5 +11,27 @@
 <img src="https://w.namu.la/s/a97b8fde220f6a82f74a1201cca4b641962a7126b96fea83d0c2e343445e52be629825698255794429df7cc06a723980cbb211a21f1740304bd33b8ad898950be367ecde7f83b857e57dd142f889699b3bfd3427eafa11c71aade4efdd951364" width="50px">
 <p>등등 본사만 7개, 다 합하면 19개의 기업</p>
 <p><strong>결과:</strong> 겁나 많음</p>
+<h3>우리 동네 학교들</h3>
+<p>초등학교:</p>
+<p> 3개</p>
+<p> 상암, 상지, 하늘초</p>
+<br>
+<p>중학교</p>
+<p>1개</p>
+<p>상암중</p>
+<br>
+<p>고등학교</p>
+<p>1개</p>
+<p>상암고</p>
+<a href="https://namu.wiki/w/%EC%83%81%EC%95%94%EA%B3%A0%EB%93%B1%ED%95%99%EA%B5%90"><p style="front-size: 40px:"></p>나무위키 상암고</a>
+<p>특수학교</p>
+<p>2개</p>
+<p>일본인, 드와이트 외국인 <small>(어쨌든 둘 다 외국인 학교네....)</small></p>
+<h3>우리 동네 공공장소들</h3>
+<p>난지 한강 공원, 평화의 공원, 노을 공원, 하늘 공원, 난지천공원, 박정희 대통령 기념도서관, <strong>서부 운전면허 시험장</strong></p>
+<h2>우리 동네의 재미있는 사실들</h2>
+<p><strong>수리온 헬리콥터</strong>가 상암동을 자주 지나간다.</p>
+<p>노을 공원 바로 옆에 노을 캠핑장이 있다고 전해진다.....이지만 사실이다.</p>
+<a href="https://www.google.com/search?q=%EC%83%81%EC%95%94%EB%8F%99%EC%9D%98%20%EA%B3%B5%EC%9B%90%20%EC%BA%A0%ED%95%91%EC%9E%A5&ei=rFU1YsTDI8vm2roPg5CH2Aw&ved=2ahUKEwi5k8KgpdH2AhVGhlYBHVFjBMsQvS56BAgCEEc&uact=5&oq=%EC%83%81%EC%95%94%EB%8F%99%EC%9D%98+%EA%B3%B5%EC%9B%90+%EC%BA%A0%ED%95%91%EC%9E%A5&gs_lcp=Cgdnd3Mtd2l6EAMyBQgAEKIEOgUIIRCgAToECAAQDToICAAQCBANEB46CAgAEA0QBRAeOgYIABANEB46BwghEAoQoAE6BAghEBVKBAhBGABKBAhGGABQAFj8GWDWHGgBcAB4AIABhwGIAdoOkgEEOC4xMJgBAKABAcABAQ&sclient=gws-wiz&tbs=lf:1,lf_ui:1&tbm=lcl&rflfq=1&num=10&rldimm=3482710167921697667&lqi=Ch3sg4HslZTrj5nsnZgg6rO17JuQIOy6oO2VkeyepUiTsOrC5YCAgAhaMRACEAMQBBgAGAMYBCIf7IOB7JWU64-ZIOydmCDqs7Xsm5Ag7Lqg7ZWRIOyepSoCCAOSAQpjYW1wZ3JvdW5kmgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVVJSYlhOcGNYQkJSUkFCqgEZEAEqFSIR6rO17JuQIOy6oO2VkSDsnqUoCQ&phdesc=TDiM-vpZMAs&rlst=f#rlfi=hd:;si:14040718344658326281,l,Ch3sg4HslZTrj5nsnZgg6rO17JuQIOy6oO2VkeyepUisrcLA5YCAgAhaMRACEAMQBBgAGAMYBCIf7IOB7JWU64-ZIOydmCDqs7Xsm5Ag7Lqg7ZWRIOyepSoCCAOSAQpjYW1wZ3JvdW5kmgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVVJOYlVseFkxSkJFQUWqARkQASoVIhHqs7Xsm5Ag7Lqg7ZWRIOyepSgJ,y,32QUZAKnSRI;mv:[[37.58245545598688,126.93283709224022],[37.53094742227734,126.80409105952538],null,[37.55670588961886,126.8684640758828],14]"><p style="front size: 40px"></p> 노을 캠핑장 지도</a>
 </body>
 </html>
