table.html을 완성함

--- a/220313/220313/table.html
+++ b/220313/220313/table.html
@@ -16,7 +16,7 @@
     <td>2행 2열</td>
   </tr>
 </table>
-<table border="1"
+<table border="1">
 <caption>명절 선물 상품</caption>
 <thead><tr>
   <td>품종</td>
