--- a/220320/form 2.html
+++ b/220320/form 2.html
@@ -5,8 +5,8 @@
     <title>폼 연스하기</title>
 </head>
 <body>
-<from><fieldset>
-    <lesend>배송정보</lesend>
+<form><fieldset>
+    <legend>배송정보</legend>
     <ul>
         <li>
             <label for="name">이름</label>
@@ -24,9 +24,9 @@
         <input type="text" id="driver" readonly>
     </ul>
     <div>
-        <label for=""
+        <label for=""></label>
     </div>
         </fieldset>
-</from>
+</form>
 </body>
 </html>
