--- a/220320/form.html
+++ b/220320/form.html
@@ -5,7 +5,7 @@
     <title>form</title>
 </head>
 <body>
-<from>
+<form>
     <fieldeset>
             <legend>상품 선택</legend>
             <lable>텍스트</lable><input type="text" size="10"></lable><br>
@@ -16,15 +16,15 @@
         <legend>배송 정보</legend>
         <ul>
             <li>
-                <lable for="name">이름</lable>
+                <label for="name">이름</label>
                 <input type="text" id="name" size="10">
             </li>
             <li>
-                <lable for="addrass"></lable>
-                <input type=" id=addrass">
+                <label for="addrass"></label>
+                <input type=" id="addrass">
             </li>
             <li>
-                <lable for="mail">이메일0</lable>
+                <label for="mail">이메일0</label>
                 <input type="email" id="mail">
                 <lable for="phone"> 전화번호</lable>
                 <input type="tel" id="phone">
@@ -35,10 +35,10 @@
     <fieldeset>
         <legend>상품 선택</legend>
         <p>주문할 상품을 선택하세요</p>
-       <lable><input type="checkbox"딸기></lable>
-        <lable><input type="checkbox">사과</lable>
-        <lable><input type="checkbox">배
-        <p>포장여부를 선택하세요</p></lable>
+       <label><input type="checkbox"딸기></label>
+        <label><input type="checkbox">사과</label>
+        <label><input type="checkbox">배
+        <p>포장여부를 선택하세요</p></label>
         <lable><input type="radio" name="pack">포장</lable>
         <lable><input type="radio" name="pack">포장 안 함</lable>
 
@@ -69,11 +69,11 @@
         <legend>개인정보입력</legend>
         <ul>
             <li>
-            <lable for="username">이름</lable>
+            <label for="username">이름</label>
             <input  type="text" id="username">
         </li>
             <li>
-                <lable for="birthday">생년월일</lable>
+                <label for="birthday">생년월일</label>
                 <input type="date" id="birthday">
             </li>
         </ul>
@@ -85,6 +85,6 @@
             <input type="file">
         </div>
     </fieldset>
-</from>
+</form>
 </body>
 </html>
