--- a/220320/form 2.html
+++ b/220320/form 2.html
@@ -2,7 +2,7 @@
 <html lang=<ko>
 <head>
     <meta charset="UTF-8">
-    <title>폼 연스하기</title>
+    <title>폼 연습하기</title>
 </head>
 <body>
 <form><fieldset>
