--- a/220320/form.html
+++ b/220320/form.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <form>
-    <fieldeset>
+    <fieldset>
             <legend>상품 선택</legend>
-            <lable>텍스트</lable><input type="text" size="10"></lable><br>
-            <lable>비밀번호<imput type="password"></imput></lable><br>
+            <label>텍스트<input type="text" size="10"></label><br>
+            <label>비밀번호<input type="password"></label><br>
         <input type="submit" value="로그인">
-    </fieldeset>
-    <fieldeset>
+    </fieldset>
+    <fieldset>
         <legend>배송 정보</legend>
         <ul>
             <li>
@@ -20,42 +20,42 @@
                 <input type="text" id="name" size="10">
             </li>
             <li>
-                <label for="addrass"></label>
-                <input type=" id="addrass">
+                <label for="addrass">주소</label>
+                <input type="text" id="addrass">
             </li>
             <li>
-                <label for="mail">이메일0</label>
+                <label for="mail">이메일</label>
                 <input type="email" id="mail">
                 <lable for="phone"> 전화번호</lable>
                 <input type="tel" id="phone">
 
             </li>
         </ul>
-    </fieldeset>
-    <fieldeset>
+    </fieldset>
+    <fieldset>
         <legend>상품 선택</legend>
         <p>주문할 상품을 선택하세요</p>
-       <label><input type="checkbox"딸기></label>
+       <label><input type="checkbox">딸기</label>
         <label><input type="checkbox">사과</label>
         <label><input type="checkbox">배
         <p>포장여부를 선택하세요</p></label>
-        <lable><input type="radio" name="pack">포장</lable>
-        <lable><input type="radio" name="pack">포장 안 함</lable>
+        <label><input type="radio" name="pack">포장</label>
+        <label><input type="radio" name="pack">포장 안 함</label>
 
-    </fieldeset>
-    <fieldest>
+    </fieldset>
+    <fieldset>
         <legend>개수선택</legend>
         <ul>
         <li>
-            <lable>딸기</lable>
-            <input type="number" min="0" max="5>kg">
+            <label>딸기</label>
+            <input type="number" min="0" max="5">kg
         </li>
             <li>
-                <lable></lable>
-                <input type="range" min="0" max="3" value="0>kg">
+                <label>배</label>
+                <input type="range" min="0" max="3" value="0">kg
             </li>
             </ul>
-    </fieldest>
+    </fieldset>
     <fieldset>
         <legend>배송일 지정</legend>
         <input type="date">
