고치기 및 숙제 중간 과정 저장

--- a/220402/border-text.html
+++ b/220402/border-text.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>레드향 레시피</title>
     <style>
             #box1{
     border: 1px dashed red
