--- a/220402/inrtro.html
+++ b/220402/inrtro.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>내집 소개</h1>
+<h2>내집의 주요 가구 및 전자기기</h2>
+<div class="a" id="a"><p>피아노</p></div>
+<div class="a" id="b"><p>게이머가 쓰던 슈퍼 컴퓨터<br>아버지께서 2등에 당첨되어<small>(회사 추첨제한 30개 안에 들었었다.)</small> 오셨다.</p></div>
+<div class="a" id="c"><p><small>아버지께서 쓰시는</small>전동 책상</p></div>
+<h1>내가 가지고 있는 컴퓨터 게임 및 게임소개</h1>
+<div class="b" id="d"><p><strong>게임 이름: </strong>Space Engineers</p><br><p>이 게임은 어떠한 행성에서 시작하여 함선을 만들고, 다른 사람들과 함께 서로 싸우고, 광활한 우주를 즐기는 게임이다.</p></div>
+<div class="b" id="e"><p><strong>게임 이름: </strong>Reft</p><br><p>이 게임은 4인승의 뗏목에서 시작하여, 뗏못을 확장하면서 뗏목을 부시려는 상어를 창으로 찌르고, 나뭇잎 정수기와 작은 그릴로 배고픔과 목마름을 채우는 게임입니다.</p></div>
+<div class="b" id="f"><p><strong>게임 이름: </strong>solargene</p><br><p>이 게임은 행성에 건물을 짓고, 사람을 대려와 발전을 추구하는 건설 및 경영 게임이다. 연구를 할 수 있고, 놀 수 있습니다.</p></div>
+<div class="b" id="g"></div>
+<div class="b" id="h"></div>
+<div class="b" id="i"></div>
 </body>
 </html>
