--- a/220402/inrtro.html
+++ b/220402/inrtro.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+                    #a{
+    border: 1px dashed red
+    }
+            #b{
+    border: 1px dashed blue
+    }
+    </style>
 </head>
 <body>
-
+<div id="a"><h1>내 게임 소개</h1><p><strong>게임 이름: </strong>Space Engineers</p><p><strong>게임 설명: </strong>이 게임은 광활한 우주를 돌아다니며 행성에서 자원을 수집하고, 우주선을 건설하여, 해적이나, 다른 온라인 플레이어의 세력과 싸우는 게임이다.</p><br><p><strong>게임 이름: </strong>solagene(솔라겐)</p><p><strong>게임 설명: </strong>이 게임은 우주에 떠있는 한 행성에서 시작하여 자원을 배달시키고, 건설하는 것이 주 목적인 게임이다.</p><br><p><strong>게임 이름: </strong>Reft</p><p><strong>게임 설명: </strong>이 게임은 한 4평의 뗏목에서부터 시작하여, 뗏목을 확장하고, 그것을 부시려는 상어를 물리치고, 정수기와 그릴을 이용해 물과 먹을 것을 공급받는 게임이다.</p><br></div>
+<div id="b"><h1>내 게임 진행도</h1><p><strong>게임 이름: </strong>Space Engineers</p><p><strong>게임 진행도: </strong>친구와 함께 우주선을 만드는 중이다.</p><br><p><strong>게임 이름: </strong>solagene(솔라겐)</p><p><strong>게임 진행도: </strong>필요한 게임의 구성요소는 다 갖췄고, 사람들도 이주하였고, 이제는 우주정거장을 만들고 있다.</p><br><p><strong>게임 이름: </strong>Reft</p><p><strong>게임 진행도: </strong>용광로를 이용해, 엔딩 직전까지 갔다</p><br></div>
 </body>
 </html>
