--- a/220319/town.html
+++ b/220319/town.html
@@ -22,7 +22,7 @@
 <p>고등학교</p>
 <p>1개</p>
 <p>상암고</p>
-<a href="https://namu.wiki/w/%EC%83%81%EC%95%94%EA%B3%A0%EB%93%B1%ED%95%99%EA%B5%90"><p style="front-size: 40px:"></p>나무위키 상암고</a>
+<a href="https://namu.wiki/w/%EC%83%81%EC%95%94%EA%B3%A0%EB%93%B1%ED%95%99%EA%B5%90"><p style="front-size: 40px;"></p>나무위키 상암고</a>
 <p>특수학교</p>
 <p>2개</p>
 <p>일본인, 드와이트 외국인 <small>(어쨌든 둘 다 외국인 학교네....)</small></p>
@@ -31,6 +31,6 @@
 <h2>우리 동네의 재미있는 사실들</h2>
 <p><strong>수리온 헬리콥터</strong>가 상암동을 자주 지나간다.</p>
 <p>노을 공원 바로 옆에 노을 캠핑장이 있다고 전해진다.....이지만 사실이다.</p>
-<a href="https://www.google.com/search?q=%EC%83%81%EC%95%94%EB%8F%99%EC%9D%98%20%EA%B3%B5%EC%9B%90%20%EC%BA%A0%ED%95%91%EC%9E%A5&ei=rFU1YsTDI8vm2roPg5CH2Aw&ved=2ahUKEwi5k8KgpdH2AhVGhlYBHVFjBMsQvS56BAgCEEc&uact=5&oq=%EC%83%81%EC%95%94%EB%8F%99%EC%9D%98+%EA%B3%B5%EC%9B%90+%EC%BA%A0%ED%95%91%EC%9E%A5&gs_lcp=Cgdnd3Mtd2l6EAMyBQgAEKIEOgUIIRCgAToECAAQDToICAAQCBANEB46CAgAEA0QBRAeOgYIABANEB46BwghEAoQoAE6BAghEBVKBAhBGABKBAhGGABQAFj8GWDWHGgBcAB4AIABhwGIAdoOkgEEOC4xMJgBAKABAcABAQ&sclient=gws-wiz&tbs=lf:1,lf_ui:1&tbm=lcl&rflfq=1&num=10&rldimm=3482710167921697667&lqi=Ch3sg4HslZTrj5nsnZgg6rO17JuQIOy6oO2VkeyepUiTsOrC5YCAgAhaMRACEAMQBBgAGAMYBCIf7IOB7JWU64-ZIOydmCDqs7Xsm5Ag7Lqg7ZWRIOyepSoCCAOSAQpjYW1wZ3JvdW5kmgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVVJSYlhOcGNYQkJSUkFCqgEZEAEqFSIR6rO17JuQIOy6oO2VkSDsnqUoCQ&phdesc=TDiM-vpZMAs&rlst=f#rlfi=hd:;si:14040718344658326281,l,Ch3sg4HslZTrj5nsnZgg6rO17JuQIOy6oO2VkeyepUisrcLA5YCAgAhaMRACEAMQBBgAGAMYBCIf7IOB7JWU64-ZIOydmCDqs7Xsm5Ag7Lqg7ZWRIOyepSoCCAOSAQpjYW1wZ3JvdW5kmgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVVJOYlVseFkxSkJFQUWqARkQASoVIhHqs7Xsm5Ag7Lqg7ZWRIOyepSgJ,y,32QUZAKnSRI;mv:[[37.58245545598688,126.93283709224022],[37.53094742227734,126.80409105952538],null,[37.55670588961886,126.8684640758828],14]"><p style="front size: 40px"></p> 노을 캠핑장 지도</a>
+<a href="https://www.google.com/search?q=%EC%83%81%EC%95%94%EB%8F%99%EC%9D%98%20%EA%B3%B5%EC%9B%90%20%EC%BA%A0%ED%95%91%EC%9E%A5&ei=rFU1YsTDI8vm2roPg5CH2Aw&ved=2ahUKEwi5k8KgpdH2AhVGhlYBHVFjBMsQvS56BAgCEEc&uact=5&oq=%EC%83%81%EC%95%94%EB%8F%99%EC%9D%98+%EA%B3%B5%EC%9B%90+%EC%BA%A0%ED%95%91%EC%9E%A5&gs_lcp=Cgdnd3Mtd2l6EAMyBQgAEKIEOgUIIRCgAToECAAQDToICAAQCBANEB46CAgAEA0QBRAeOgYIABANEB46BwghEAoQoAE6BAghEBVKBAhBGABKBAhGGABQAFj8GWDWHGgBcAB4AIABhwGIAdoOkgEEOC4xMJgBAKABAcABAQ&sclient=gws-wiz&tbs=lf:1,lf_ui:1&tbm=lcl&rflfq=1&num=10&rldimm=3482710167921697667&lqi=Ch3sg4HslZTrj5nsnZgg6rO17JuQIOy6oO2VkeyepUiTsOrC5YCAgAhaMRACEAMQBBgAGAMYBCIf7IOB7JWU64-ZIOydmCDqs7Xsm5Ag7Lqg7ZWRIOyepSoCCAOSAQpjYW1wZ3JvdW5kmgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVVJSYlhOcGNYQkJSUkFCqgEZEAEqFSIR6rO17JuQIOy6oO2VkSDsnqUoCQ&phdesc=TDiM-vpZMAs&rlst=f#rlfi=hd:;si:14040718344658326281,l,Ch3sg4HslZTrj5nsnZgg6rO17JuQIOy6oO2VkeyepUisrcLA5YCAgAhaMRACEAMQBBgAGAMYBCIf7IOB7JWU64-ZIOydmCDqs7Xsm5Ag7Lqg7ZWRIOyepSoCCAOSAQpjYW1wZ3JvdW5kmgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVVJOYlVseFkxSkJFQUWqARkQASoVIhHqs7Xsm5Ag7Lqg7ZWRIOyepSgJ,y,32QUZAKnSRI;mv:[[37.58245545598688,126.93283709224022],[37.53094742227734,126.80409105952538],null,[37.55670588961886,126.8684640758828],14]"><p style="front size: 40px;"></p> 노을 캠핑장 지도</a>
 </body>
 </html>
