blogmain.html 완료

--- a/220403/blogmain.html
+++ b/220403/blogmain.html
@@ -59,7 +59,7 @@
         <h1>가상현실</h1>
         <p class="a" style="margin: 40.5%"><strong>꼭 확인하세요!</strong></p>
         <img src="https://t1.daumcdn.net/cfile/tistory/99FD7F33599BBDE539" width="300px" style="margin: 0 35%" class="a">
-        <p class="a"><strong>이것도 봐 주세요!</strong></p>
+        <p class="a"><strong>이것도 보세요!</strong></p>
         <p class="a">내 연락처: 010-7634-3812</p>
     </footer>
 </div>
